# SimpleFlightpathSimulator

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml  build.sh
CMake/: FindBoost.cmake  FindBoostConfig.cmake  FindCatch2.cmake  FindOdeint.cmake  FindRapidXML.cmake
docs/: dynamic_simulation_of_aircraft.md  programme_goals.md  programme_structure.md  scripted_flight.md  scripted_maneuvers.md
docs/artwork/: Simulation-Test.drawio
example/: CMakeLists.txt
example/output_csv/: CMakeLists.txt  example_waypoint_queue.xml  flightpath.example.cpp  johns_mountain_demo.xml  top_gun_demo.xml
include/geometry3d/: orientation.h  position.h  quaternion.h  rotation.h  velocity.h
include/physics/: sealevel.h
include/scripted_6dof_flight/: simple_waypoint_sim.h
include/simple_flightpath_sim/: flightpath.h
include/simple_waypoint_sim/: simple_waypoint_sim.h
include/target6DoF/: scripted.h
include/utilities/: angle_utils.h
src/: CMakeLists.txt
src/geometry3d/: CMakeLists.txt  orientation.cpp  orientation.h  position.cpp  quaternion.cpp  quaternion.h  rotation.cpp  velocity.cpp  velocity.h
src/geometry3d_test/: CMakeLists.txt  orientation.test.cpp  orientationTests.cpp  quoternion.test.cpp  quoternionTests.cpp  rotationTests.cpp  velocityTests.cpp
src/physics/: CMakeLists.txt  environment.h  sealevel.cpp  sealevel.h
src/scripted_6dof_flight/: CMakeLists.txt  aircraft_state.cpp  aircraft_state.h  cruise.cpp  cruise.h  enter_cruise.cpp  enter_cruise.h  flightpath.cpp  follow_waypoints.cpp  follow_waypoints.h  maneuover.h  scripted_target.cpp  scripted_target.h  simple_waypoint_sim.cpp  target_state.cpp  target_state.h  waypoint.cpp  waypoint.h  waypoint_queue.cpp  waypoint_queue.h
src/scripted_6dof_flight_test/: CMakeLists.txt  cruiseTests.cpp  follow_waypointsTest.cpp  waypointQueueTests.cpp  waypointTests.cpp
src/simple_flightpath_sim/: CMakeLists.txt  flightpath.cpp
src/simple_waypoint_sim/: CMakeLists.txt  aircraft_state.cpp  aircraft_state.h  enter_cruise.cpp  enter_cruise.h  follow_waypoints.cpp  follow_waypoints.h  maneuover.h  simple_waypoint_sim.cpp  waypoint.cpp  waypoint.h  waypoint_queue.cpp  waypoint_queue.h
src/simple_waypoint_sim_test/: CMakeLists.txt  cruiseTests.cpp  desktop.ini  follow_waypoints.test.cpp  follow_waypointsTest.cpp  sample_waypoint_queue.xml  waypointQueueTests.cpp  waypointTests.cpp  waypoint_queue.test.cpp
src/target6DoF/: CMakeLists.txt  basic_target.cpp  basic_target.h  scripted_target.cpp  scripted_target.h
src/target6DoF/scripted/: CMakeLists.txt  scripted.cpp  scripted.h
src/test_utilities/: CMakeLists.txt  angle_utils.cpp  angle_utils.h  division_utils.cpp  division_utils.h
src/test_utilities_test/: CMakeLists.txt  division_utils.test.cpp
src/utilities/: CMakeLists.txt  angle_utils.cpp  division_utils.cpp  division_utils.h
src/utilities_test/: CMakeLists.txt  division_utils.test.cpp
test/: CMakeLists.txt  build.bat  example_waypoint_queue.xml  flightpath.test.cpp  placeholder.cpp  sillyTest.xml
test/CMake/: FindCatch2.cmake
test/basic/: CMakeLists.txt  flightpath.test.cpp
test/basic/CMake/: FindCatch2.cmake
test/odeint/: CMakeLists.txt  rk4.cpp
test/odeintTests/: CMakeLists.txt
test/rapidxml/: CMakeLists.txt
test/rapidxmlTests/: CMakeLists.txt
